# fastapi-starter-template

./: README.md  example.env  pyproject.toml
app/: main.py  settings.py
app/api/: router.py
app/api/v1/: router.py
